[project]
name = "puchkeep"
version = "0.1.0"
description = "PuchKeep MCP server and memory tools"
authors = ["Divyanshu Dhruv <divyanshudhruv@proton.me>"]
requires-python = ">=3.8"

[project.dependencies]
python-dotenv = "*"
fastmcp = "*"
pydantic = "*"
supabase = "*"
httpx = "*"
markdownify = "*"
readabilipy = "*"
aiofiles = "*"
beautifulsoup4 = "*"
shutil = "*"
